[#noissue] Refactor ApplicationMetricDao